--- a/Housing price.ipynb
+++ b/Housing price.ipynb
@@ -8,7 +8,7 @@
     "# Base on Kaggle Tuorial\n",
     "- Source train: https://www.dataquest.io/blog/kaggle-getting-started/\n",
     "- Source Project: https://www.kaggle.com/competitions/home-data-for-ml-course/overview\n",
-    "- Souce Code Github: https://github.com/william-leeds/kaggle-housing/blob/master/ridge-regression.ipynb"
+    "- Souce ref Code Github: https://github.com/william-leeds/kaggle-housing/blob/master/ridge-regression.ipynb"
    ]
   },
   {
